# ROS

./: README.md
Project 1/amcl/config/: amcl.yaml
Project 1/amcl/launch/: amcl.launch  path.launch
Project 1/amcl/maps/: map2.pgm  map_labf.pgm  map_labf.yaml
Project 1/amcl/rviz/: amcl_rviz.rviz
Project 1/ekf_localization/: CMakeLists.txt
Project 1/ekf_localization/config/: parameters.yaml
Project 1/ekf_localization/launch/: ekf_localization.launch
Project 1/ekf_localization/rviz/: ekf.rviz
Project 1/ekf_localization/src/: featuresextractor.cpp  kalman.cpp  kalman.hpp  main.cpp
Project 1/robot_localization/: package.xml
Project 1/robot_localization/config/: ekf_localization.yalm  ekf_sim.yalm
Project 1/robot_localization/error_files/: error.csv
Project 1/robot_localization/launch/: ekf_launch.launch  ekf_sim.launch
Project 1/robot_localization/rviz/: kalman_rviz.rviz
Projeto 2/motion_planning/: CMakeLists.txt
Projeto 3/action_planning/: CMakeLists.txt  package.xml
ekf_localization/: README.md
ekf_localization/config/: parameters.yaml
ekf_localization/launch/: ekf_localization.launch
kalman_filter/: README.md
kalman_filter/config/: ekf_localization.yalm  ekf_localization_map.yalm
kalman_filter/launch/: ekf_launch.launch  ekf_sim.launch
kalman_filter/rviz/: kalman_rviz.rviz
monte_carlo/: CMakeLists.txt  package.xml
monte_carlo/config/: amcl.yaml
monte_carlo/launch/: amcl.launch
monte_carlo/maps/: map1.pgm  map2.yaml  map_lab.pgm  map_lab.yaml  map_lab2.pgm  map_lab2.yaml
monte_carlo/rviz/: amcl_rviz.rviz
motion_planning/: package.xml
motion_planning/config/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  global_planner_params.yaml  launch.yaml  local_costmap_params.yaml  navfn_global_planner_params.yaml  recovery_behaviours.yaml  waypoints.yaml
motion_planning/launch/: amcl.launch  motion.launch  pathway.launch
motion_planning/rviz/: motion_rviz.rviz
motion_planning/src/: waypoints.py
turtlebot3_datasets/: README.md  package.xml
turtlebot3_datasets/scripts/: download_dataset.sh
(+34 files in other folders)
